plugins {
	id 'java'
	id 'eclipse'
	id 'org.springframework.boot' version '3.1.1'
	id 'io.spring.dependency-management' version '1.1.1'
}

group = 'com.summerschool'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
    jcenter()
  maven {
    url 'https://m2.dv8tion.net/releases'
  }
}

dependencies {
	implementation 'com.theokanning.openai-gpt3-java:service:0.14.0'
	implementation 'net.dv8tion:JDA:5.0.0-beta.12'

	implementation 'org.apache.commons:commons-lang3:3.12.0'
	implementation 'commons-io:commons-io:2.13.0'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	implementation 'de.dfki.mary:voice-cmu-slt-hsmm:5.2.1', {
      exclude group: 'com.twmacinta', module: 'fast-md5'
      exclude group: 'gov.nist.math', module: 'Jampack'
      exclude group: 'org.apache.logging.log4j', module: 'log4j-core'
      exclude group: 'org.apache.logging.log4j', module: 'log4j-1.2-api'
    }

	implementation 'com.sedmelluq:lavaplayer:1.3.77'
	
	implementation 'com.slack.api:slack-api-client:1.30.0'

	implementation 'com.hexadevlabs:gpt4all-java-binding:1.1.5'
}

tasks.named('test') {
	useJUnitPlatform()
}
